<resources>
    <string name="app_name">omatetest</string>

    <string name="start_service">Service START</string>
    <string name="stop_service">Service STOP</string>
    <string name="service_running">Service IS running</string>
    <string name="service_inactive">Service is NOT running</string>
    <string name="dump_data">Dump data</string>
    <string name="dump_success">Success!</string>
    <string name="sensor_service_running">Sensor service is running</string>
    <string name="sensor_service_stopped">Sensor service stopped</string>
    <string name="omatetest_notification">Omatetest Service</string>
    <string name="scan_wifi">Scan WIFI</string>
    <string name="timestamp_desc_hint">describe timestamp</string>
    <string name="save_timestamp">save</string>
    <string name="ok">OK</string>
    <string name="started_scan">Wifi-Scan active</string>
    <string name="stop_scan">stop wifi scan</string>
</resources>
