<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/start_service_button"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/dump_button"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_below="@+id/info_text"
        android:text="@string/dump_data"/>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_service_button"
        android:text="@string/service_inactive" />

    <Button
        android:id="@+id/scan_wifi"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_below="@+id/dump_button"
        android:text="@string/scan_wifi" />

    <EditText
        android:id="@+id/timestamp_text"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/dump_button"
        android:layout_alignTop="@+id/dump_button"
        android:hint="@string/timestamp_desc_hint" />

    <Button
        android:id="@+id/save_timestamp"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/timestamp_text"
        android:layout_alignLeft="@+id/timestamp_text"
        android:text="@string/save_timestamp" />


</RelativeLayout>
